# OpsPilot

./: .env.example  .gitignore  README.md  album-api.json  analysis.md  architecture.md  architecture_report.md  docker-compose.ghcr.yml  docker-compose.yml  smoke_test.py
backend/: .dockerignore  .gitignore  (+1 more)
opspilot/backend/: .env.example  Dockerfile  pyproject.toml
opspilot/backend/app/: config.py  main.py
opspilot/backend/app/agents/: base.py  graph.py  orchestrator.py  state.py
opspilot/backend/app/agents/commander/: agent.py  prompts.py
opspilot/backend/app/agents/deployment/: agent.py
opspilot/backend/app/agents/logs/: agent.py
opspilot/backend/app/api/: security.py
opspilot/backend/app/models/: __init__.py  events.py  findings.py  incident.py  recommendations.py  timeline.py
opspilot/backend/app/providers/: base.py  foundry.py  mock.py  models.py
opspilot/backend/app/services/: __init__.py  agent_service.py  availability.py  event_stream.py  foundry.py  incident_monitor.py  incident_service.py  investigation_runner.py  investigation_store.py  recommendation_service.py  timeline_service.py
opspilot/backend/app/telemetry/: __init__.py  azure_monitor.py  base.py  factory.py  synthetic.py
opspilot/backend/app/tools/: deployment_tools.py  logs_tools.py  memory_tools.py  metrics_tools.py
opspilot/backend/fixtures/logs/: log_analytics_responses.json
opspilot/backend/tests/: conftest.py
opspilot/backend/tests/integration/: test_ui_backend_contracts.py
opspilot/backend/tests/unit/: test_agents.py  test_graph.py  test_providers.py  test_reasoning.py  test_security.py
(+246 files in other folders)
