[tool.poetry]
name = "opspilot-backend"
version = "0.1.0"
description = "OpsPilot FastAPI backend and LangGraph agent runtime"
authors = ["OpsPilot Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"

# Web framework
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"

# Agent orchestration
langgraph = "^0.2.0"
langchain-openai = "^0.2.0"
langchain-core = "^0.3.0"

# Azure SDKs
azure-ai-projects = "^1.0.0b4"
azure-identity = "^1.17.0"
openai = "^1.47.0"
azure-cosmos = "^4.7.0"
azure-search-documents = "^11.6.0"
azure-keyvault-secrets = "^4.8.0"
azure-monitor-opentelemetry = "^1.6.0"
azure-monitor-query = "^2.0.0"

# Observability
opentelemetry-sdk = "^1.27.0"
opentelemetry-api = "^1.27.0"
opentelemetry-instrumentation-fastapi = "^0.48b0"

# Utilities
redis = "^5.1.0"
httpx = "^0.27.0"
python-dotenv = "^1.0.0"
structlog = "^24.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
ruff = "^0.6.0"
mypy = "^1.11.0"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
